add_subdirectory(agents)
add_subdirectory(avd)
add_subdirectory(cmdline)
add_subdirectory(curl)
add_subdirectory(feature)
add_subdirectory(files)
add_subdirectory(location)
add_subdirectory(metrics)
add_subdirectory(protobuf)
add_subdirectory(protos)
add_subdirectory(studio-config)
add_subdirectory(tracing)
add_subdirectory(utils)
