add_subdirectory(adb)
add_subdirectory(agents)
add_subdirectory(avd)
add_subdirectory(base)
add_subdirectory(cmdline)
add_subdirectory(crashreport)
add_subdirectory(curl)
add_subdirectory(feature)
add_subdirectory(files)
add_subdirectory(gps)
add_subdirectory(grpc-utils)
add_subdirectory(hardware)
add_subdirectory(host-common)
add_subdirectory(location)
add_subdirectory(metrics)
add_subdirectory(protobuf)
add_subdirectory(protos)
add_subdirectory(proxy)
add_subdirectory(qsn)
add_subdirectory(sockets)
add_subdirectory(studio-config)
add_subdirectory(telnet)
add_subdirectory(telephony)
add_subdirectory(tracing)
add_subdirectory(update-check)
add_subdirectory(utils)
add_subdirectory(wear)
